syntax = "proto3";

package orders;

option go_package= "github.com/PiotrIzw/webstore-grcp/internal/pb";

service OrdersService {
  rpc CreateOrder (CreateOrderRequest) returns (CreateOrderResponse);
  rpc GetOrder (GetOrderRequest) returns (GetOrderResponse);
}

message CreateOrderRequest {
  string user_id = 1;
  repeated OrderItem items = 2;
}

message OrderItem {
  string product_id = 1;
  int32 quantity = 2;
  double price = 3;
}

message CreateOrderResponse {
  string order_id = 1;
  double total = 2;
}

message GetOrderRequest {
  string order_id = 1;
}

message GetOrderResponse {
  string user_id = 1;
  repeated OrderItem items = 2;
  double total = 3;
  string status = 4;
}